# PixelRendererRayTracing

./: .gitignore  Cargo.toml  Makefile  README.MD  build.sh
output/: image.ppm  info.json
src/: common.rs  lib.rs  main.rs  vectors.rs
src/common/: camera.rs  intersection.rs  light_source.rs  mesh.rs  object.rs  primitive.rs  ray.rs  renderable.rs  renderer.rs  scene.rs  sphere.rs  transform.rs  triangle.rs  vertex.rs
src/vectors/: vec2.rs  vec3.rs
